modify exec command to use non depcrated version
+ auto reformating